next button eventlistner added

--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -11,7 +11,7 @@
 		<div class="carousel">
 			<button class="carousel__button carousel__button--left">
 				<img
-					height="70px"
+					height="50px"
 					src="./assets/left.svg"
 					alt="left arrow"
 					class="carousel__button-image"
@@ -19,7 +19,7 @@
 			</button>
 			<div class="carousel__track-container">
 				<ul class="carousel__track">
-					<li class="carousel__slide">
+					<li class="carousel__slide current-slide">
 						<img
 							class="carousel__slide-image"
 							src="./assets/slide4.jpg"
@@ -51,7 +51,7 @@
 			</div>
 			<button class="carousel__button carousel__button--right">
 				<img
-					height="70px"
+					height="50px"
 					src="./assets/right.svg"
 					alt="left arrow"
 					class="carousel__button-image"
@@ -59,12 +59,13 @@
 			</button>
 			<div class="carousel__nav">
 				<button
-					class="carousel__indicator carousel__indicator--current-slide"
+					class="carousel__indicator carousel__indicator--current-slide current-slide"
 				></button
 				><button class="carousel__indicator"></button
 				><button class="carousel__indicator"></button
 				><button class="carousel__indicator"></button>
 			</div>
 		</div>
+		<script src="./js/carousel.js"></script>
 	</body>
 </html>
