canculator layout completed

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -10,7 +10,12 @@
 	<body>
 		<div class="calculator">
 			<h1 class="calculator__title">Calculator</h1>
-			<input class="calculator__input" name="screen" type="text" />
+			<input
+				class="calculator__input"
+				id="screen"
+				name="screen"
+				type="text"
+			/>
 			<div class="calculator__button-container">
 				<div class="calculator__number-container">
 					<table>
