snake music added

--- a/Snake/index.html
+++ b/Snake/index.html
@@ -6,10 +6,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>nokiaSnake</title>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div class="snake__container">
-			<h1 class="snake__title">Snake</h1>
+			<h1 class="snake__title">press arrow keys to start</h1>
 			<canvas
 				class="snake__board"
 				width="400"
@@ -18,5 +24,5 @@
 			></canvas>
 		</div>
 	</body>
-	<script src="./js/index.js"></script>
+	<script src="./index.js"></script>
 </html>
