class implemented in slider

--- a/Carousel/index.html
+++ b/Carousel/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<!-- <button class="upload-button">Upload</button> -->
 		<div class="carousel">
 			<button class="carousel__button carousel__button--left">
 				<img
@@ -19,24 +20,31 @@
 			</button>
 			<div class="carousel__track-container">
 				<ul class="carousel__track">
-					<li class="carousel__slide current-slide">
+					<!-- <li class="carousel__slide current-slide">
 						<img
 							class="carousel__slide-image"
 							src="./assets/slide4.jpg"
 							alt="carousel image "
 						/>
-					</li>
-					<li class="carousel__slide">
+					</li> -->
+					<!-- <li class="carousel__slide">
 						<img
 							class="carousel__slide-image"
 							src="./assets/slide1.jpg"
 							alt="carousel image "
 						/>
-					</li>
-					<li class="carousel__slide">
+					</li> -->
+					<!-- <li class="carousel__slide">
 						<img
 							class="carousel__slide-image"
-							src="./assets/slide2.jpg"
+							src="./assets/slide4.jpg"
+							alt="carousel image "
+						/>
+					</li> -->
+					<!-- <li class="carousel__slide">
+						<img
+							class="carousel__slide-image"
+							src="./assets/slide3.jpg"
 							alt="carousel image "
 						/>
 					</li>
@@ -46,7 +54,7 @@
 							src="./assets/slide3.jpg"
 							alt="carousel image "
 						/>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 			<button class="carousel__button carousel__button--right">
@@ -58,12 +66,7 @@
 				/>
 			</button>
 			<div class="carousel__nav">
-				<button
-					class="carousel__indicator carousel__indicator--current-slide current-slide"
-				></button
-				><button class="carousel__indicator"></button
-				><button class="carousel__indicator"></button
-				><button class="carousel__indicator"></button>
+				<!-- //nav buttons -->
 			</div>
 		</div>
 		<script src="./js/carousel.js"></script>
