dots in navigation fixed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 			<li>
 				<a class="js__link" href="./Snake/index.html">Snake-Game</a>
 			</li>
+			<li>
+				<a class="js__link" href="./Reusable-Carausel/index.html"
+					>Carousel Component</a
+				>
+			</li>
 		</div>
 	</body>
 </html>
