quote section added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 					>Carousel Component</a
 				>
 			</li>
+			<li>
+				<a class="js__link" href="./quotes/index.html">Quotes</a>
+			</li>
 		</div>
 	</body>
 </html>
