--- a/quotes/index.html
+++ b/quotes/index.html
@@ -16,6 +16,9 @@
 	<body>
 		<div class="quotes">
 			<h1 class="quotes__header">Quotes</h1>
+			<div class="quotes__button-container">
+				<button class="quotes__button">Get Quotes</button>
+			</div>
 			<div class="quotes__container"></div>
 		</div>
 		<script src="./fetch.js"></script>
