--- a/index.html
+++ b/index.html
@@ -14,28 +14,29 @@
 		/>
 	</head>
 	<body>
-		<div class="js__container"></div>
-		<h1 class="js__title">JavaScript Learning projects</h1>
-		<div class="js__link-container">
-			<!-- <li>
+		<div class="js__container">
+			<h1 class="js__title">JavaScript Learning projects</h1>
+			<div class="js__link-container">
+				<!-- <li>
 				<a class="js__link" href="./Carousel/index.html">Carousel</a>
 			</li> -->
-			<li>
-				<a class="js__link" href="./Calculator/index.html"
-					>calculator</a
-				>
-			</li>
-			<li>
-				<a class="js__link" href="./Snake/index.html">Snake-Game</a>
-			</li>
-			<li>
-				<a class="js__link" href="./Reusable-Carausel/index.html"
-					>Carousel Component</a
-				>
-			</li>
-			<li>
-				<a class="js__link" href="./quotes/index.html">Quotes</a>
-			</li>
+				<li>
+					<a class="js__link" href="./Calculator/index.html"
+						>calculator</a
+					>
+				</li>
+				<li>
+					<a class="js__link" href="./Snake/index.html">Snake-Game</a>
+				</li>
+				<li>
+					<a class="js__link" href="./Reusable-Carausel/index.html"
+						>Carousel Component</a
+					>
+				</li>
+				<li>
+					<a class="js__link" href="./quotes/index.html">Quotes</a>
+				</li>
+			</div>
 		</div>
 	</body>
 </html>
