--- a/quotes/index.html
+++ b/quotes/index.html
@@ -20,6 +20,7 @@
 				<button class="quotes__button">Get Quotes</button>
 			</div>
 			<div class="quotes__container"></div>
+			<div class="pagination__container"></div>
 		</div>
 		<script src="./fetch.js"></script>
 	</body>
